# libtrixi

./: .codecov.yml  .gitignore  .typos.toml  .zenodo.json  CITATION.bib  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Project.toml  README.md  paper.bib  paper.md
.github/workflows/: CompatHelper.yml  Documenter.yml  SpellCheck.yml  TagBot.yml  ci.yml  draft-pdf.yml
LibTrixi.jl/: .gitignore  Project.toml  README.md
LibTrixi.jl/examples/: libelixir_demo.jl  libelixir_p4est2d_dgsem_euler_sedov.jl  libelixir_p4est2d_euler_sedov.jl  libelixir_p4est3d_euler_baroclinic_instability.jl  libelixir_structured2d_source_terms_callback.jl  libelixir_structured2d_source_terms_database.jl  libelixir_t8code2d_advection_amr.jl  libelixir_t8code2d_euler_tracer_amr.jl  libelixir_t8code3d_euler_IC_baroclinic.jl  libelixir_t8code3d_euler_IC_baroclinic_tracer.jl  libelixir_t8code3d_euler_IC_baroclinic_tracer_amr.jl  libelixir_t8code3d_euler_baroclinic_instability.jl  libelixir_t8code3d_euler_baroclinic_instability_HS.jl  libelixir_t8code3d_euler_baroclinic_instability_HS_tracer.jl  libelixir_t8code3d_euler_baroclinic_instability_HS_tracer_amr.jl  libelixir_t8code3d_euler_baroclinic_instability_HS_tracer_amr_fixeddt.jl  libelixir_t8code3d_euler_baroclinic_instability_tracer_amr.jl  libelixir_t8code3d_euler_tracer.jl  libelixir_t8code3d_euler_tracer_passive.jl  libelixir_t8code_2d_dgsem_advection_amr.jl  libelixir_t8code_2d_dgsem_advection_basic.jl  libelixir_tree1d_advection_basic.jl  libelixir_tree1d_dgsem_advection_basic.jl  libelixir_tree2d_dgsem_euler.jl  libelixir_tree2d_warm_bubble.jl
LibTrixi.jl/lib/: Makefile  Project.toml  build-project.jl  build.jl  init-project.c  init.c  precompile_execution_file.jl
LibTrixi.jl/src/: LibTrixi.jl  api_c.jl  api_jl.jl  simulationstate.jl
LibTrixi.jl/test/: Project.toml  runtests.jl  test_auxiliary.jl  test_function_pointers.jl  test_interface.jl  test_interface_v2.jl  test_t8code.jl
c-fortran-api/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_eval.html  globals_func.html  group__api__c.html  group__api__f.html  interfacelibtrixi_1_1trixi__finalize.html  interfacelibtrixi_1_1trixi__initialize__c.html  interfacelibtrixi_1_1trixi__initialize__simulation__c.html  interfacelibtrixi_1_1trixi__is__finished__c.html  interfacelibtrixi_1_1trixi__step.html  menudata.js  namespacelibtrixi.html  namespacemembers.html  namespacemembers_func.html  trixi_8f90.html  trixi_8h.html  trixi_8h_source.html
c-fortran-api/search/: all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  defines_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  groups_0.js  groups_1.js  namespaces_0.js  searchdata.js
cmake/: FindJulia.cmake  FindLibTrixi.cmake  FindLibtrixi.cmake  FindT8code.cmake  Findtest-drive.cmake
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/c-fortran-api/: functions_func.html  globals.html  group__api__c.html  group__api__f.html  interfacelibtrixi_1_1trixi__calculate__dt.html  interfacelibtrixi_1_1trixi__eval__julia__c.html  interfacelibtrixi_1_1trixi__is__finished__c.html  interfacelibtrixi_1_1trixi__load__element__averaged__primitive__vars.html  interfacelibtrixi_1_1trixi__load__node__weights.html  interfacelibtrixi_1_1trixi__load__primitive__vars.html  interfacelibtrixi_1_1trixi__ndofselement.html  interfacelibtrixi_1_1trixi__store__conservative__var.html  interfacelibtrixi_1_1trixi__version__julia__extended__c.html  interfacelibtrixi_1_1trixi__version__library__c.html  trixi_8h_source.html
dev/contributing/: index.html
dev/developers/: index.html
dev/license/: index.html
dev/reference-c-fortran/: index.html
dev/reference-julia/: index.html
dev/search/: index.html
dev/troubleshooting/: index.html
docs/: .gitignore  determine_doxygen_dir.jl  make.jl
docs/doxygen/: Doxyfile  DoxygenLayout.xml  libtrixi.dox
docs/src/: developers.md  index.md  issues.md  license.md  reference-c-fortran.md  reference-julia.md  reference-libtrixi-jl.md  troubleshooting.md
docs/templates/: reference-c-fortran.tmpl.md
examples/: .gitignore  CMakeLists.txt  CMakeListsExternal.txt  MakefileCompiled  MakefileExternal  fortran_hello_world.f90  messy_mockup.c  simple_t8code.c  simple_trixi_controller.c  simple_trixi_controller.f90  simple_trixi_controller.jl  source_terms.c  source_terms.h  t8code.c  trixi_controller_baroclinic.c  trixi_controller_baroclinic.f90  trixi_controller_data.c  trixi_controller_data.f90  trixi_controller_data_load.c  trixi_controller_data_load.f90  trixi_controller_data_store.c  trixi_controller_data_store.f90  trixi_controller_mpi.c  trixi_controller_mpi.f90  trixi_controller_raw_data.c  trixi_controller_simple.c  trixi_controller_simple.f90  trixi_controller_source_terms.c  trixi_controller_t8code.c  trixi_controller_t8code.f90  trixi_controller_tracer.c
previews/PR109/: index.html  search_index.js
previews/PR126/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
previews/PR136/: .documenter-siteinfo.json  index.html  search_index.js
run_julia_MPIonly/: Manifest.toml  setup-mpi.jl
src/: api.c  api.f90  auxiliary.c  auxiliary.h  control.c  data.c  function_pointers.c  function_pointers.h  libtrixi.c  libtrixi.h  setup.c  trixi.c  trixi.f90  trixi.h  trixi_tls.c  trixi_version.c  version.c
test/: CMakeLists.txt  auxiliary.cpp  interface_c.cpp  runtests.jl  test_interface.jl  test_interface_c.jl
test/c/: CMakeLists.txt  auxiliary.cpp  interface_c.cpp  simulation.cpp  t8code.cpp
test/fortran/: CMakeLists.txt  juliaCode_suite.f90  main.f90  simulationRun_suite.f90  t8code_suite.f90  versionInfo_suite.f90
utils/: libtrixi-init-julia
v0.1.0/: index.html  search_index.js
v0.1.1/: index.html  search_index.js
v0.1.2/: index.html  search_index.js
v0.1.3/: index.html  search_index.js
v0.1.4/: .documenter-siteinfo.json  index.html  search_index.js
v0.1.5/: .documenter-siteinfo.json  index.html  objects.inv
(+642 files in other folders)
